--- a/stylesDashboard.css
+++ b/stylesDashboard.css
@@ -63,3 +63,34 @@ main {
     display: flex;
     flex-wrap: wrap;
 }
+
+
+.widgets {
+    display: flex;
+    gap: 10px;
+}
+
+.widget {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px;
+    background-color: #FFC300;
+    color: #fff;
+    border: 1px solid #FFC300;
+    border-radius: 5px;
+}
+
+.widget button {
+    padding: 10px 10px;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    width: 100%; 
+}
+
+.widget button:hover {
+    background-color: #0056b3;
+}
